--- a/src/components/movie/Movie.css
+++ b/src/components/movie/Movie.css
@@ -1,42 +1,40 @@
-
-
-
 #myVideo {
-    /* position: fixed; */
-    right: 0;
-    bottom: 0;
-    min-width: 100%; 
-    min-height: 100%;
-  }
+  /* position: fixed; */
+  right: 0;
+  bottom: 0;
+  min-width: 100%;
+  min-height: 100%;
+}
 
-  .movie-container{
-      background: rgba(0, 0, 0, 0.5);
-    
-  }
+.movie-container {
+  background: rgba(0, 0, 0, 0.5);
+}
 
-  
-  
-  .content {
-    /* position: fixed; */
-    bottom: 0;
-    
-    color: #f1f1f1;
-    width: 80%;
-    text-align: left;    
-    padding: 20px;
-  }
-  
-  #myBtn {
-    width: 200px;
-    font-size: 18px;
-    padding: 10px;
-    border: none;
-    background: #000;
-    color: #fff;
-    cursor: pointer;
-  }
-  
-  #myBtn:hover {
-    background: #ddd;
-    color: black;
-  }
+.content {
+  /* position: fixed; */
+  bottom: 0;
+
+  color: #f1f1f1;
+  width: 80%;
+  text-align: left;
+  padding: 20px;
+}
+
+#myBtn {
+  width: 200px;
+  font-size: 18px;
+  padding: 10px;
+  border: none;
+  background: #000;
+  color: #fff;
+  cursor: pointer;
+}
+
+#myBtn:hover {
+  background: #ddd;
+  color: black;
+}
+
+.active {
+  background-color: red;
+}
